--- a/assets/assets-for-demo/demo.css
+++ b/assets/assets-for-demo/demo.css
@@ -390,7 +390,7 @@
     border-radius: 0;
 }
 .section-tabs{
-    background: #fff;
+    background: #f6f5fa;
 }
 .section-pagination{
     padding-bottom: 0;
