--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -17154,7 +17154,9 @@ footer .pull-center {
 }
 
 .section {
-    padding: 70px 0;
+    /* padding: 70px 0; */
+    padding: 50px 0;
+
 }
 
 .profile-page .page-header {
