--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -6589,6 +6589,10 @@ button.bg-dark:focus {
     width: 100%;
     height: 100%;
     border: 0;
+    display: block;
+    overflow: hidden;
+
+
 }
 
 .embed-responsive-21by9::before {
