--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -17590,3 +17590,4 @@ hr {
      -moz-filter: brightness(1.10) grayscale(100%) contrast(90%);
      filter: brightness(1.10) grayscale(100%);
    }
+@import url('https://fonts.googleapis.com/css?family=Allura&subset=latin-ext');
