--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -77,6 +77,7 @@ h5,
 h6 {
     margin-top: 0;
     margin-bottom: 0.5rem;
+    font-weight: bold;
 }
 
 p {
@@ -792,12 +793,13 @@ h2,
 
 h3,
 .h3 {
-    font-size: 1.75rem;
+    font-size: 1.6rem;
 }
 
 h4,
 .h4 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+
 }
 
 h5,
@@ -11432,6 +11434,12 @@ fieldset[disabled] .form-check .form-check-input,
     background: #b3b9c4;
 }
 
+.card .card-header-authors {
+  background: #fff;
+
+}
+
+
 .card .card-header-rose,
 .card.bg-rose,
 .card.card-rotate.bg-rose .front,
@@ -14737,8 +14745,9 @@ textarea {
 
 .nav-pills .nav-item .nav-link.active {
     color: #fff;
-    background-color: #9c27b0;
-    box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(156, 39, 176, 0.6);
+    background-color: #b3b9c4;
+    box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2);
+    /* , 0 13px 24px -11px rgba(156, 39, 176, 0.6); */
 }
 
 .nav-pills .nav-item i {
@@ -14919,6 +14928,9 @@ h4,
 .h4 {
     font-size: 1.125rem;
     line-height: 1.5em;
+    font-weight: bold;
+
+
 }
 
 h5,
@@ -16337,7 +16349,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 }
 
 .page-header {
-    height: 100vh;
+    height: 70vh;
     background-position: center center;
     background-size: cover;
     margin: 0;
@@ -17567,6 +17579,23 @@ hr {
       border-bottom: 0px solid #ffffff;
    }
 
+   .hr2 {
+     display: block;
+     position: relative;
+     padding: 10;
+     margin: 8px auto;
+     height: 0;
+     width: 50px;
+     max-height: 0;
+     font-size: 1px;
+     line-height: 0;
+     clear: both;
+     border: none;
+     border-top: 6px solid #024594;
+     border-bottom: 0px solid #ffffff;
+   }
+
+
    .img-hover img {
        -webkit-transition: all .3s ease; /* Safari and Chrome */
      	-moz-transition: all .3s ease; /* Firefox */
@@ -17590,4 +17619,23 @@ hr {
      -moz-filter: brightness(1.10) grayscale(100%) contrast(90%);
      filter: brightness(1.10) grayscale(100%);
    }
-@import url('https://fonts.googleapis.com/css?family=Allura&subset=latin-ext');
+/* @import url('https://fonts.googleapis.com/css?family=Allura&subset=latin-ext'); */
+
+.lead {
+  font-weight: bold;
+}
+
+.chart-title {
+  /* font-weight: bold; */
+  text-transform: uppercase;
+  padding: 50px 0 0 0;
+}
+
+.tematy-raportu {
+  font-size: 1.3em;
+}
+
+#nav_bar ul li a.active-page
+{
+  background-color:blue;
+}
